# LLM-week-5-Lab

./: .gitignore  README.md  Vanshika_w11421407.md  agent_flow.py  crew.py  fix_data.py  format_json_files.py  lab_project.py  main.py  output.txt  pyproject.toml  report.json
config/: agents.yaml  tasks.yaml
data/: item_subset.json  subset_item.jsonl  subset_review.jsonl  test_review_subset.json  user_subset.json
docs/knowledge/: crewai_coding_skills.txt  eda_playbook.txt  eda_rating_prediction_checklist.txt
submission_outputs/: 01_deterministic.txt  02_baseline_crew.txt  03_collaborative_crew.txt  04_hierarchical_crew.txt  05_flow.txt  06_report_json.txt  07_manifest.txt
